[tool.poetry]
name = "caesar_cipher"
version = "0.1.0"
description = ""
authors = ["Danilo Paes"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
